--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,5 +26,6 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          BASE_BRANCH: source
           BRANCH: master # The branch the action should deploy to.
           FOLDER: public # The folder the action should deploy.
