--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@types/node": "^13.9.2",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
     "cssnano": "^4.1.10",
     "cwebp-bin": "^5.1.0",
     "gatsby": "^2.19.45",
@@ -19,6 +22,7 @@
     "gatsby-plugin-postcss": "^2.1.22",
     "gatsby-plugin-react-helmet": "^3.1.24",
     "gatsby-plugin-sharp": "^2.4.13",
+    "gatsby-plugin-typescript": "^2.2.5",
     "gatsby-plugin-typography": "^2.3.25",
     "gatsby-remark-copy-linked-files": "^2.1.40",
     "gatsby-remark-images": "^3.1.50",
@@ -36,6 +40,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.9.0",
     "react-typography": "^0.16.19",
     "tailwindcss": "^1.2.0",
     "typeface-merriweather": "0.0.72",
