--- a/package.json
+++ b/package.json
@@ -56,6 +56,10 @@
   "keywords": [
     "gatsby"
   ],
+  "browserslist": [
+    "> 2%",
+    "not IE <= 11"
+  ],
   "license": "MIT",
   "main": "n/a",
   "repository": {
@@ -65,7 +69,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,css}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
