--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^13.9.2",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@types/react-helmet": "^5.0.15",
     "cssnano": "^4.1.10",
     "cwebp-bin": "^5.1.0",
     "gatsby": "^2.19.45",
@@ -22,7 +23,7 @@
     "gatsby-plugin-postcss": "^2.1.22",
     "gatsby-plugin-react-helmet": "^3.1.24",
     "gatsby-plugin-sharp": "^2.4.13",
-    "gatsby-plugin-typescript": "^2.2.5",
+    "gatsby-plugin-typescript": "^2.3.0",
     "gatsby-plugin-typography": "^2.3.25",
     "gatsby-remark-copy-linked-files": "^2.1.40",
     "gatsby-remark-images": "^3.1.50",
@@ -69,7 +70,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md,css}\"",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,css,tsx}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
