--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,10 @@
-name: Update blog
+name: Deploy update
 
-on: [push, repository_dispatch]
-
+on:
+  push:
+    branches:
+      - master
+  
 jobs:
   update:
     runs-on: ubuntu-latest
