--- a/.github/workflows/deployghp.yml
+++ b/.github/workflows/deployghp.yml
@@ -1,30 +1,25 @@
-name: Deploy update
-
+name: deploy github pages
 on:
   push:
     branches:
-      - master
-  
+      - source
 jobs:
-  update:
+  deploy:
+    name: Deploy to github pages
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
         with:
           persist-credentials: false
-
       - name: Set Node.js
         uses: actions/setup-node@master
         with:
           node-version: 13.x
-
       - name: Install dependencies
         run: yarn install --pure-lockfile
-
       - name: Build
         run: yarn run build
-
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
