--- a/.github/workflows/testgatsby.yml
+++ b/.github/workflows/testgatsby.yml
@@ -1,13 +1,17 @@
-name: Test update
+name: Test
 
-on: [pull_request]
+on: 
+  pull_request:
+    branches:
+      - source
 
 jobs:
-  update:
+  build:
+    name: Test gatsby
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
+        uses: actions/checkout@v2
         with:
           persist-credentials: false
 
