--- a/.github/workflows/deployghp.yml
+++ b/.github/workflows/deployghp.yml
@@ -1,4 +1,4 @@
-name: deploy github pages
+name: Deploy github pages
 on:
   push:
     branches:
@@ -16,6 +16,19 @@ jobs:
         uses: actions/setup-node@master
         with:
           node-version: 13.x
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v1
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
       - name: Install dependencies
         run: yarn install --pure-lockfile
       - name: Build
