--- a/.github/workflows/testgatsby.yml
+++ b/.github/workflows/testgatsby.yml
@@ -1,13 +1,11 @@
 name: Test
 
-on: 
+on:
   pull_request:
-    branches:
-      - source
 
 jobs:
   build:
-    name: Test gatsby
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
